<resources>
    <string name="app_name">PAN</string>

    // PAN Confirmation
    <string name="instruction_pan_verification">First of the few steps to set you up with a Bank Account</string>

    <string name="input_title_pan">pan number</string>
    <string name="input_title_birthdate">birthdate</string>

    <string name="hint_pan">AAAAA0000A</string>
    <string name="hint_day">DD</string>
    <string name="hint_month">MM</string>
    <string name="hint_year">YYYY</string>

    <string name="label_pan">PAN</string>
    <string name="label_birthdate">Birthdate</string>

    <string name="action_next">Next</string>
    <string name="action_no_pan">I don\'t have a PAN</string>

    <string name="form_info">Providing PAN &amp; Date of Birth helps us find and fetch your KYC from a central registry by the Government of India. <a href="https://epifi.com/">Learn more</a></string>

    <string name="error_empty_pan">PAN cannot be empty</string>
    <string name="error_invalid_pan">Enter valid PAN</string>
    <string name="error_invalid_birthdate">Enter valid birthdate</string>
</resources>
