<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="form"
            type="dev.thedukerchip.epifipan.ui.pan.PanVerificationForm" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottom_action_container"
            android:layout_alignParentTop="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.pan.PanVerificationActivity">

                <Space
                    android:id="@+id/top_space"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/screen_spacing_top"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/app_logo_imv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/top_space"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/instruction_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/pan_instruction_marginTop"
                    android:text="@string/instruction_pan_verification"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/app_logo_imv" />

                <TextView
                    android:id="@+id/pan_label_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/pan_form_marginTop"
                    android:text="@string/label_pan"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/instruction_tv" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pan_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/pan_form_label_spacing"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/pan_label_tv">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pan_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_pan"
                        android:inputType="textCapCharacters"
                        android:text="@={form.pan}" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:id="@+id/birthdate_guideline"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/pan_form_inter_spacing"
                    app:layout_constraintTop_toBottomOf="@id/pan_input_layout" />

                <TextView
                    android:id="@+id/birthdate_label_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_birthdate"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/birthdate_guideline" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/date_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/pan_form_label_spacing"
                    app:hintEnabled="false"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/birthdate_label_tv"
                    app:layout_constraintWidth_percent=".2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/date_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_day"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="@integer/day_input_max_length"
                        android:text="@={form.birthDate.day}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/month_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/pan_input_inter_spacing"
                    app:hintEnabled="false"
                    app:layout_constraintStart_toEndOf="@id/date_input_layout"
                    app:layout_constraintTop_toTopOf="@id/date_input_layout"
                    app:layout_constraintWidth_percent=".2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/month_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_month"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="@integer/month_input_max_length"
                        android:text="@={form.birthDate.month}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/year_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/pan_input_inter_spacing"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toEndOf="@id/month_input_layout"
                    app:layout_constraintTop_toTopOf="@id/date_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/year_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/hint_year"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="@integer/year_input_max_length"
                        android:text="@={form.birthDate.year}" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:id="@+id/bottom_space"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/screen_spacing_top"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/date_input_layout" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/screen_spacing_start" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/screen_spacing_end" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/bottom_action_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/form_info_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_spacing_start"
                android:layout_marginTop="@dimen/pan_bottom_elements_inter_spacing"
                android:layout_marginEnd="@dimen/screen_spacing_start"
                android:layout_marginBottom="@dimen/pan_bottom_elements_inter_spacing"
                android:text="@string/form_info"
                android:textColorLink="?colorPrimary"
                app:layout_constraintBottom_toTopOf="@id/next_btn"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start" />

            <Button
                android:id="@+id/next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_spacing_start"
                android:layout_marginEnd="@dimen/screen_spacing_start"
                android:layout_marginBottom="@dimen/pan_bottom_elements_inter_spacing"
                android:text="@string/action_next"
                app:layout_constraintBottom_toTopOf="@id/no_pan_btn"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start" />

            <Button
                android:id="@+id/no_pan_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_spacing_start"
                android:layout_marginEnd="@dimen/screen_spacing_start"
                android:text="@string/action_no_pan"
                app:layout_constraintBottom_toTopOf="@id/space_bottom"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start" />

            <Space
                android:id="@+id/space_bottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/screen_spacing_bottom"
                app:layout_constraintBottom_toBottomOf="parent" />
        </LinearLayout>

    </RelativeLayout>
</layout>